--- a/index.html
+++ b/index.html
@@ -15,35 +15,65 @@
   </style>
 </head>
 <body>
-  Product
+  <header>
+    <div class="header__left">
+      <img src="./images/logo.svg" alt="blogr logo">
+      <nav>
+        <div class="nav__section">
+          <div class="nav__section-header">
+            <a href="#">Product</a>
+            <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
+          </div>
+          <div class="nav__dropdown">
+            <a href="#">Overview</a>
+            <a href="#">Pricing</a>
+            <a href="#">Marketplace</a>
+            <a href="#">Features</a>
+            <a href="#">Integrations</a>
+          </div>
+        </div>
+        <div class="nav__section">
+          <div class="nav__section-header">
+            <a href="#">Company</a>
+            <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
+          </div>
+          <div class="nav__dropdown">
+            <a href="#">About</a>
+            <a href="#">Team</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+          </div>
+        </div>
+        <div class="nav__section">
+          <div class="nav__section-header">
+            <a href="#">Connect</a>
+            <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
+          </div>
+          <div class="nav__dropdown">
+            <a href="#">Contact</a>
+            <a href="#">Newsletter</a>
+            <a href="#">LinkedIn</a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="header__right-desktop">
+      <a href="#">Login</a>
+      <button class="button-solid">Sign Up</button>
+    </div>
+    <div class="header__right-mobile">
+      <img src="./images/icon-hamburger.svg" alt="menu open hamburger">
+    </div>
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
+    <div class="header__main">
+      <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <div class="header__button-wrapper">
+        <button class="button-solid">Start for Free</button>
+        <button class="button-transparent">Learn More</button>
+      </div>
+    </div>
+  </header>
 
   Designed for the future
 
@@ -70,30 +100,39 @@
   Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
   capable of producing even the most complicated sites.
 
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <img src="./images/logo.svg" alt="blogr logo">
+    <div class="footer__category">
+      <h2>Product</h2>
+      <div class="footer__links">
+        <a href="#">Overview</a>
+        <a href="#">Pricing</a>
+        <a href="#">Marketplace</a>
+        <a href="#">Features</a>
+        <a href="#">Integrations</a>
+      </div>
+    </div>
+    <div class="footer__category">
+      <h2>Company</h2>
+      <div class="footer__links">
+        <a href="#">About</a>
+        <a href="#">Team</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
+    </div>
+    <div class="footer__category">
+      <h2>Connect</h2>
+      <div class="footer__links">
+        <a href="#">Contact</a>
+        <a href="#">Newsletter</a>
+        <a href="#">LinkedIn</a>
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">MooseCowBear</a>.
+    </div>
+  </footer>
 </body>
 </html>
