--- a/index.html
+++ b/index.html
@@ -66,44 +66,55 @@
     </div>
 
     <div class="header__main">
-      <h1>A modern publishing platform</h1>
-      <p>Grow your audience and build your online brand</p>
+      <div class="text"> <!-- spacing between h#s and ps is consistent so all one wrapper tag -->
+        <h1 class="extra-large">A modern publishing platform</h1>
+        <p>Grow your audience and build your online brand</p>
+      </div>
       <div class="header__button-wrapper">
         <button class="button-solid">Start for Free</button>
         <button class="button-transparent">Learn More</button>
       </div>
     </div>
   </header>
-
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
+  <section>
+    <h2 class="large">Designed for the future</h2>
+    <div class="text">
+      <h3 class="small">Introducing an extensible editor</h3>
+      <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+      The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+      videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+      change the looks of a blog.</p>
+    </div>
+    <div class="text">
+      <h3 class="small">Robust content management</h3>
+      <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+      by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+    </div>
+  </section>
+  <section>
+    <div class="text">
+      <h2 class="large">State of the Art Infrastructure</h2>
+      <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+      This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+    </div>
+  </section>
+  <section>
+    <div class="text">
+      <h3 class="small">Free, open, simple</h3>
+      <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+      features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+      and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+    </div>
+    <div class="text">
+      <h3 class="small">Powerful tooling</h3>
+      <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+      capable of producing even the most complicated sites.</p>
+    </div>
+  </section>
   <footer>
     <img src="./images/logo.svg" alt="blogr logo">
     <div class="footer__category">
-      <h2>Product</h2>
+      <h2 class="extra-small">Product</h2>
       <div class="footer__links">
         <a href="#">Overview</a>
         <a href="#">Pricing</a>
@@ -113,7 +124,7 @@
       </div>
     </div>
     <div class="footer__category">
-      <h2>Company</h2>
+      <h2 class="extra-small">Company</h2>
       <div class="footer__links">
         <a href="#">About</a>
         <a href="#">Team</a>
@@ -122,7 +133,7 @@
       </div>
     </div>
     <div class="footer__category">
-      <h2>Connect</h2>
+      <h2 class="extra-small">Connect</h2>
       <div class="footer__links">
         <a href="#">Contact</a>
         <a href="#">Newsletter</a>
