--- a/index.html
+++ b/index.html
@@ -76,41 +76,56 @@
       </div>
     </div>
   </header>
-  <section>
-    <h2 class="large">Designed for the future</h2>
-    <div class="text">
-      <h3 class="small">Introducing an extensible editor</h3>
-      <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-      The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-      videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-      change the looks of a blog.</p>
-    </div>
-    <div class="text">
-      <h3 class="small">Robust content management</h3>
-      <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-      by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
-    </div>
-  </section>
-  <section>
-    <div class="text">
-      <h2 class="large">State of the Art Infrastructure</h2>
-      <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-      This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
-    </div>
-  </section>
-  <section>
-    <div class="text">
-      <h3 class="small">Free, open, simple</h3>
-      <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-      features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-      and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
-    </div>
-    <div class="text">
-      <h3 class="small">Powerful tooling</h3>
-      <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-      capable of producing even the most complicated sites.</p>
-    </div>
-  </section>
+  <main>
+    <section class="one">
+      <picture>
+        <source media="(max-width: 620px)" srcset="./images/illustration-editor-mobile.svg">
+        <img src="./images/illustration-editor-desktop.svg" alt="computer screen illustration">
+      </picture>
+      <h2 class="large">Designed for the future</h2>
+      <div class="section__text-wrapper">
+        <div class="text">
+          <h3 class="small">Introducing an extensible editor</h3>
+          <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+          change the looks of a blog.</p>
+        </div>
+        <div class="text">
+          <h3 class="small">Robust content management</h3>
+          <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.</p>
+        </div>
+      </div>
+    </section>
+    <section class="two">
+      <img src="./images/illustration-phones.svg" alt="phone illustration">
+      <div class="text">
+        <h2 class="large">State of the Art Infrastructure</h2>
+        <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+        This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
+      </div>
+    </section>
+    <section class="three">
+      <picture>
+        <source media="(max-width: 620px)" srcset="./images/illustration-laptop-mobile.svg">
+        <img src="./images/illustration-laptop-desktop.svg" alt="laptop illustration">
+      </picture>
+      <div class="section__text-wrapper">
+        <div class="text">
+          <h3 class="small">Free, open, simple</h3>
+          <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+        </div>
+        <div class="text">
+          <h3 class="small">Powerful tooling</h3>
+          <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+          capable of producing even the most complicated sites.</p>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer>
     <img src="./images/logo.svg" alt="blogr logo">
     <div class="footer__category">
