Add class to dropdown links

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
               <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
             </div>
             <div class="nav__dropdown">
-              <a href="#">Overview</a>
-              <a href="#">Pricing</a>
-              <a href="#">Marketplace</a>
-              <a href="#">Features</a>
-              <a href="#">Integrations</a>
+              <a class="dropdown-link" href="#">Overview</a>
+              <a class="dropdown-link" href="#">Pricing</a>
+              <a class="dropdown-link" href="#">Marketplace</a>
+              <a class="dropdown-link" href="#">Features</a>
+              <a class="dropdown-link" href="#">Integrations</a>
             </div>
           </div>
           <div class="nav__section">
@@ -45,10 +45,10 @@
               <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
             </div>
             <div class="nav__dropdown">
-              <a href="#">About</a>
-              <a href="#">Team</a>
-              <a href="#">Blog</a>
-              <a href="#">Careers</a>
+              <a class="dropdown-link" href="#">About</a>
+              <a class="dropdown-link" href="#">Team</a>
+              <a class="dropdown-link" href="#">Blog</a>
+              <a class="dropdown-link" href="#">Careers</a>
             </div>
           </div>
           <div class="nav__section">
@@ -57,9 +57,9 @@
               <img src="./images/icon-arrow-light.svg" alt="expand menu arrow">
             </div>
             <div class="nav__dropdown">
-              <a href="#">Contact</a>
-              <a href="#">Newsletter</a>
-              <a href="#">LinkedIn</a>
+              <a class="dropdown-link" href="#">Contact</a>
+              <a class="dropdown-link" href="#">Newsletter</a>
+              <a class="dropdown-link" href="#">LinkedIn</a>
             </div>
           </div>
         </nav>
