Add class to nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header__top">
       <div class="header__left">
         <img src="./images/logo.svg" alt="blogr logo">
-        <nav>
+        <nav class="nav">
           <div class="nav__section">
             <div class="nav__section-header">
               <a href="#">Product</a>
